[package]
name = "audrey"
version = "0.3.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
claxon = { optional = true, version = "0.4" }
hound = { optional = true, version = "3" }
lewton = { optional = true, version = "0.10" }
caf = { optional = true, version = "0.1" }
alac = { optional = true, version = "0.5" }
dasp_sample = "0.11.0"
dasp_frame = "0.11.0"

[features]
default = ["flac", "ogg_vorbis", "wav"]
flac = ["claxon"]
ogg_vorbis = ["lewton"]
wav = ["hound"]
